Replace URI with URL in location-related scenarios